...
  </TouchableOpacity>
);

const changeTimetableView = () => {

};
const groupViewOptions = ['вся группа', '1 подгруппа', '2 подгруппа'];
export class Header extends Component {
  state = {
    visibleGroupView: false,
  }

  changeGroupView = () => {
...
