...
          searchItem={searchItem}
        />
        <ContainerItem styled={styles.сontainerItem}>
          <Input
            placeholder="Поиск..."
            onChangeText={this.hangleSearchInput}
            testID="searchInput"
            value={inputText}
          />
        </ContainerItem>
        {
          isLoading ? <Spinner />
            : (
...
